--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Publish Test Report
-        if: success() || failure()
-        uses: scacap/action-surefire-report@v1
+      if: success()
+      uses: scacap/action-surefire-report@v1
